fix overlap with floating button on header

--- a/app/react/App/scss/layout/_header.scss
+++ b/app/react/App/scss/layout/_header.scss
@@ -3,6 +3,10 @@ header {
 	z-index: 40;
 	position: fixed;
 	top: 0;
+  padding-right: 60px;
+  @media(min-width: 1150px) {
+    padding-right: 0;
+  }
 
 	h1 {
 		font-size: $f-size-lg;
